--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -90,10 +90,10 @@ applications:
       repoURL: https://github.com/gnunn-gitops/acm-hub-bootstrap.git
       path: bootstrap/policies/overlays/default
 
-  # Maybe look at using NMState operator for this?
-  # disable-nic:
-  #   source:
-  #     path: clusters/local.hub/apps/disable-motherboard-nic/base
+  Maybe look at using NMState operator for this?
+  nmstate:
+    source:
+      path: clusters/local.hub/apps/nmstate/overlays/sno
 
   banner:
     annotations:
