--- a/components/configs/oauth/overlays/default/oauth.yaml
+++ b/components/configs/oauth/overlays/default/oauth.yaml
@@ -24,5 +24,5 @@ spec:
       bindDN: "openshift,dc=ocplab,dc=com"
       bindPassword:
         name: ldap-secret
-      insecure: false
-      url: "ldap://proxy-server:389/dc=ocplab,dc=com?uid"
+      insecure: true
+      url: "ldap://proxy-server/ou=users,dc=ocplab,dc=com?uid"
