Break down OAuth IDPs as kustomize components to allow mixing and matching

--- a/components/configs/oauth/overlays/matrix-template/kustomization.yaml
+++ b/components/configs/oauth/overlays/matrix-template/kustomization.yaml
@@ -1,13 +1,20 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
 
-commonAnnotations:
-  argocd.argoproj.io/compare-options: IgnoreExtraneous
-  argocd.argoproj.io/sync-options: Prune=false
-
-bases:
-- ../default
-- ../../../login-template/base
-
-patchesStrategicMerge:
-  - merge-matrix-login-template.yaml
+patches:
+  - patch: |-
+      - op: add
+        path: /spec/templates
+        value:
+          login:
+            name: matrix-login-template
+      - op: add
+        path: /spec/templates
+        value:
+          login:
+            providerSelection: matrix-providers-template
+    target:
+        group: config.openshift.io
+        kind: OAuth
+        name: cluster
+        version: v1
