Change compliance schedule to every 3 hours

--- a/components/apps/compliance-operator/overlays/cis-compliance/cis-compliance-scansetting.yaml
+++ b/components/apps/compliance-operator/overlays/cis-compliance/cis-compliance-scansetting.yaml
@@ -32,6 +32,6 @@ roles:
 - worker
 scanTolerations:
 - operator: Exists
-schedule: 0 1 * * *
+schedule: 0 */3 * * *
 showNotApplicable: false
 strictNodeScan: true
