--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -143,7 +143,8 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Build to complete"
         return hs
-    - kind: PersistentVolumeClaim
+    - group: ""
+      kind: PersistentVolumeClaim
       check: |
         hs = {}
         if obj.status ~= nil then
