--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -143,8 +143,7 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Build to complete"
         return hs
-    - group: ""
-      kind: PersistentVolumeClaim
+    - kind: PersistentVolumeClaim
       check: |
         hs = {}
         if obj.status ~= nil then
