--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -143,8 +143,29 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Build to complete"
         return hs
-    - kind: PersistentVolumeClaim
-      check: |
+    # - kind: PersistentVolumeClaim
+    #   check: |
+    #     hs = {}
+    #     if obj.status ~= nil then
+    #       if obj.status.phase ~= nil then
+    #         if obj.status.phase == "Pending" then
+    #           hs.status = "Healthy"
+    #           hs.message = obj.status.phase
+    #           return hs
+    #         end
+    #         if obj.status.phase == "Bound" then
+    #           hs.status = "Healthy"
+    #           hs.message = obj.status.phase
+    #           return hs
+    #         end
+    #       end
+    #     end
+    #     hs.status = "Progressing"
+    #     hs.message = "Waiting for PVC"
+    #     return hs
+  resourceCustomizations: |
+    PersistentVolumeClaim:
+      health.lua: |
         hs = {}
         if obj.status ~= nil then
           if obj.status.phase ~= nil then
@@ -161,7 +182,7 @@ spec:
           end
         end
         hs.status = "Progressing"
-        hs.message = "Waiting for PVC"
+        hs.message = "Waiting for certificate"
         return hs
   resourceIgnoreDifferences:
     resourceIdentifiers:
