Add enabling wake-on-lan to node-config

--- a/clusters/local.hub/apps/node-config/base/kustomization.yaml
+++ b/clusters/local.hub/apps/node-config/base/kustomization.yaml
@@ -1,2 +1,15 @@
 resources:
 - set-max-pods.yaml
+- ../../../../../../components/configs/wake-on-lan/base
+
+patches:
+  - patch: |
+      - op: replace
+        path: /spec/config/systemd/units/0/name
+        value: wol@enp0s31f6.service
+      - op: add
+        path: /metadata/labels/machineconfiguration.openshift.io~1role
+        value: worker
+    target:
+      kind: MachineConfig
+      name: 99-wol-service
