Switch to master for machineconfigpool

--- a/clusters/local.home/apps/node-config/base/kustomization.yaml
+++ b/clusters/local.home/apps/node-config/base/kustomization.yaml
@@ -9,7 +9,7 @@ patches:
         value: wol@enp8s0.service
       - op: add
         path: /metadata/labels/machineconfiguration.openshift.io~1role
-        value: worker
+        value: master
     target:
       kind: MachineConfig
       name: 99-wol-service
