--- a/components/apps/pipelines-operator/base/tekton-config.yaml
+++ b/components/apps/pipelines-operator/base/tekton-config.yaml
@@ -2,11 +2,7 @@ apiVersion: operator.tekton.dev/v1alpha1
 kind: TektonConfig
 metadata:
   annotations:
-    argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true, SkipDryRunOnMissingResource=true
-    argocd.argoproj.io/sync-wave: "99"
-    argocd.argoproj.io/tracking-id: pipeline-operator:operator.tekton.dev/TektonConfig:openshift-operators/config
-  labels:
-    openshift-pipelines.tekton.dev/sa-created: "true"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: config
 spec:
   addon:
@@ -17,6 +13,14 @@ spec:
       value: "true"
     - name: communityClusterTasks
       value: "true"
+  chain:
+    artifacts.taskrun.format: in-toto
+    artifacts.taskrun.storage: oci
+    artifacts.taskrun.signer: x509
+    artifacts.oci.storage: oci
+    artifacts.oci.format: simplesigning
+    artifacts.oci.signer: x509
+    transparency.enabled: "true"
   dashboard:
     readonly: false
   params:
@@ -27,26 +31,27 @@ spec:
     default-service-account: pipeline
     disable-affinity-assistant: true
     disable-creds-init: false
-    embedded-status: minimal
     enable-api-fields: stable
     enable-bundles-resolver: true
     enable-cluster-resolver: true
-    enable-custom-tasks: false
+    enable-custom-tasks: true
     enable-git-resolver: true
     enable-hub-resolver: true
     enable-provenance-in-status: false
     enable-tekton-oci-bundles: false
-    metrics.pipelinerun.duration-type: lastvalue
-    metrics.pipelinerun.level: pipelinerun
-    metrics.taskrun.duration-type: lastvalue
-    metrics.taskrun.level: taskrun
+    metrics.pipelinerun.duration-type: histogram
+    metrics.pipelinerun.level: pipeline
+    metrics.taskrun.duration-type: histogram
+    metrics.taskrun.level: task
     params:
     - name: enableMetrics
       value: "true"
+    performance:
+      disable-ha: false
     require-git-ssh-secret-known-hosts: false
     running-in-environment-with-injected-sidecars: true
     send-cloudevents-for-runs: false
-    verification-mode: skip
+    trusted-resources-verification-no-match-policy: ignore
   platforms:
     openshift:
       pipelinesAsCode:
@@ -55,7 +60,11 @@ spec:
           application-name: Pipelines as Code CI
           auto-configure-new-github-repo: "false"
           bitbucket-cloud-check-source-ip: "true"
-          error-detection-from-container-logs: "false"
+          custom-console-name: ""
+          custom-console-url: ""
+          custom-console-url-pr-details: ""
+          custom-console-url-pr-tasklog: ""
+          error-detection-from-container-logs: "true"
           error-detection-max-number-of-lines: "50"
           error-detection-simple-regexp: ^(?P<filename>[^:]*):(?P<line>[0-9]+):(?P<column>[0-9]+):([
             ]*)?(?P<error>.*)
@@ -67,6 +76,7 @@ spec:
           secret-github-app-token-scoped: "true"
   profile: all
   pruner:
+    disabled: false
     keep: 100
     resources:
     - pipelinerun
