--- a/components/apps/acs-operator/overlays/oauth/kustomization.yaml
+++ b/components/apps/acs-operator/overlays/oauth/kustomization.yaml
@@ -9,53 +9,13 @@ patches:
   - patch: |-
       - op: replace
         path: /spec/channel
-        value: 'stable'
+        value: 'rhacs-4.1'
     target:
       kind: Subscription
       name: rhacs-operator
-  # - patch: |-
-  #     - op: add
-  #       path: /spec/central/resources
-  #       value:
-  #         limits:
-  #           memory: 12Gi
-  #         requests:
-  #           cpu: 2000m
-  #           memory: 6Gi
-  #   target:
-  #     group: platform.stackrox.io
-  #     kind: Central
-  #     name: central
-  #     version: v1alpha1
-  # - patch: |-
-  #     - op: add
-  #       path: /spec/scanner/analyzer/resources
-  #       value:
-  #         limits:
-  #           memory: 4Gi
-  #         requests:
-  #           cpu: 1000m
-  #           memory: 2Gi
-  #   target:
-  #     group: platform.stackrox.io
-  #     kind: Central
-  #     name: central
-  #     version: v1alpha1
-  # - patch: |-
-  #     - op: replace
-  #       path: /spec/scanner/analyzer/scaling/autoScaling
-  #       value: Disabled
-  #   target:
-  #     group: platform.stackrox.io
-  #     kind: Central
-  #     name: central
-  #     version: v1alpha1
-  # - patch: |-
-  #     - op: replace
-  #       path: /spec/scanner/analyzer/scaling/replicas
-  #       value: 2
-  #   target:
-  #     group: platform.stackrox.io
-  #     kind: Central
-  #     name: central
-  #     version: v1alpha1
+  - patch: |-
+      - op: replace
+        path: /spec/perNode/collector/collection
+        value: EBPF
+    target:
+      kind: SecuredCluster
