Disable validating admission plugin temporarily

--- a/components/apps/acs-operator/overlays/secured-cluster/secured-cluster.yaml
+++ b/components/apps/acs-operator/overlays/secured-cluster/secured-cluster.yaml
@@ -9,3 +9,6 @@ metadata:
 spec:
   clusterName: ${CLUSTER_NAME}
   centralEndpoint: central-stackrox.apps.hub.ocplab.com:443
+  admissionControl:
+    listenOnCreates: false
+    listenOnUpdates: false
