Reenable stackrox addmission control

--- a/components/apps/acs-operator/overlays/secured-cluster/secured-cluster.yaml
+++ b/components/apps/acs-operator/overlays/secured-cluster/secured-cluster.yaml
@@ -10,5 +10,5 @@ spec:
   clusterName: ${CLUSTER_NAME}
   centralEndpoint: central-stackrox.apps.hub.ocplab.com:443
   admissionControl:
-    listenOnCreates: false
-    listenOnUpdates: false
+    listenOnCreates: true
+    listenOnUpdates: true
