Update ref to clientSecret

--- a/components/configs/oauth/overlays/sso/oidc-client-secret.yaml
+++ b/components/configs/oauth/overlays/sso/oidc-client-secret.yaml
@@ -10,6 +10,6 @@ spec:
   target:
     name: oidc-client-secret
   data:
-    - secretKey: bindPassword
+    - secretKey: clientSecret
       remoteRef:
         key: OIDC_OCPLAB
