--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -1,7 +1,7 @@
 default:
   app:
     enabled: true
-    enableAutoSync: true
+    enableAutoSync: false
     autoSyncPrune: false
     project: cluster-config
     destination:
