--- a/components/configs/banner/base/banner.yaml
+++ b/components/configs/banner/base/banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "Test Cluster: ${CLUSTER_NAME}"
+  text: "Cluster: ${CLUSTER_NAME}"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#0066CC'
