--- a/components/apps/gitops-operator/base/kustomization.yaml
+++ b/components/apps/gitops-operator/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- argocd-external-secret.yaml
 - create-pipeline-local-user-job.yaml
 - gitops-operator-cr.yaml
 - argocd-dex-server-rolebinding.yaml
