Fix secret name

--- a/components/configs/ldap-group-sync/base/ldap-bind-secret.yaml
+++ b/components/configs/ldap-group-sync/base/ldap-bind-secret.yaml
@@ -1,15 +1,15 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: ldap-bind-password
+  name: ldap-secret
   namespace: openshift-config
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: doppler-cluster
   target:
-    name: ldap-bind-password
+    name: ldap-secret
   data:
-    - secretKey: ldap-secret
+    - secretKey: ldap-bind-password
       remoteRef:
         key: LDAP
