--- a/clusters/local.hub/apps/nmstate/overlays/sno/node-network-configuration-policy.yaml
+++ b/clusters/local.hub/apps/nmstate/overlays/sno/node-network-configuration-policy.yaml
@@ -7,18 +7,23 @@ metadata:
 spec:
   desiredState:
     interfaces:
-    - name: bond0
-      description: Bond both nics
-      type: bond
+    - name: enp4s0
       state: up
+      type: ethernet
       ipv4:
         dhcp: true
         enabled: true
-      link-aggregation:
-        mode: active-backup
-        options:
-          miimon: '140'
-        port:
-        - enp4s0
-        - enp0s31f6
-      mtu: 1450
+        auto-dns: true
+    - name: enp0s31f6
+      state: absent
+      type: ethernet
+      ipv4:
+        dhcp: true
+        enabled: true
+        auto-dns: true
+    routes:
+      config:
+        - destination: 0.0.0.0/0
+          next-hop-address: 192.168.1.1
+          next-hop-interface: enp4s0
+          table-id: 254
