--- a/clusters/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/local.hub/argocd/bootstrap/values.yaml
@@ -92,7 +92,7 @@ applications:
 
   # Disable while we work this out
   nmstate:
-    enabled: false
+    enabled: true
     source:
       path: clusters/local.hub/apps/nmstate/overlays/sno
 
