--- a/clusters/local.hub/apps/nmstate/overlays/sno/node-network-configuration-policy.yaml
+++ b/clusters/local.hub/apps/nmstate/overlays/sno/node-network-configuration-policy.yaml
@@ -11,7 +11,7 @@ spec:
       state: up
       type: ethernet
       ipv4:
-        # dhcp: true
+        dhcp: true
         enabled: true
         auto-dns: true
     - name: enp0s31f6
