--- a/clusters/overlays/rhpds/argocd/bootstrap/kustomization.yaml
+++ b/clusters/overlays/rhpds/argocd/bootstrap/kustomization.yaml
@@ -3,14 +3,14 @@ kind: Kustomization
 
 helmCharts:
 - name: argocd-app-of-app
-  version: 0.2.4
+  version: 0.2.0
   repo: https://gnunn-gitops.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
-  releaseName: argocd-app-of-app-0.2.4
+  releaseName: argocd-app-of-app-0.2.0
 
 resources:
-- ../../../default/argocd/bootstrap
+- ../../../../base/argocd/bootstrap
 
 patches:
   - target:
