--- a/clusters/overlays/aws.cluster/argocd/bootstrap/kustomization.yaml
+++ b/clusters/overlays/aws.cluster/argocd/bootstrap/kustomization.yaml
@@ -3,14 +3,14 @@ kind: Kustomization
 
 helmCharts:
 - name: argocd-app-of-app
-  version: 0.2.5
+  version: 0.2.4
   repo: https://gnunn-gitops.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
-  releaseName: argocd-app-of-app-0.2.5
+  releaseName: argocd-app-of-app-0.2.4
 
 resources:
-- ../../../default/argocd/bootstrap
+- ../../../../base/argocd/bootstrap
 
 patches:
   - target:
@@ -19,7 +19,7 @@ patches:
     patch: |-
       - op: replace
         path: /spec/source/path
-        value: 'components/apps/compliance-operator/overlays/cis-compliance-master-only'
+        value: 'components/apps/compliance-operator/overlays/cis-compliance'
       - op: replace
         path: /spec/source/repoURL
         value: 'https://github.com/gnunn-gitops/cluster-config'
