--- a/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
@@ -17,7 +17,7 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: '0'
     source:
-      path: clusters/local.hub/apps/node-config/base
+      path: clusters/overlays/local.hub/apps/node-config/base
 
   odf-operator:
     annotations:
@@ -37,7 +37,7 @@ applications:
     destination:
       namespace: openshift-storage
     source:
-      path: clusters/local.hub/apps/lvm-operator/overlays/hub
+      path: clusters/overlays/local.hub/apps/lvm-operator/overlays/hub
 
   registry:
     annotations:
@@ -61,7 +61,7 @@ applications:
     destination:
       namespace: stackrox
     source:
-      path: clusters/local.hub/apps/acs-operator/overlays/certificate
+      path: clusters/overlays/local.hub/apps/acs-operator/overlays/certificate
 
   acm-hub:
     annotations:
@@ -94,13 +94,13 @@ applications:
   nmstate:
     enabled: true
     source:
-      path: clusters/local.hub/apps/nmstate/overlays/sno
+      path: clusters/overlays/local.hub/apps/nmstate/overlays/sno
 
   banner:
     annotations:
       argocd.argoproj.io/sync-wave: '11'
     source:
-      path: clusters/local.hub/apps/banner/overlays/hub
+      path: clusters/overlays/local.hub/apps/banner/overlays/hub
       extraSourceFields: |
         plugin:
           name: kustomize-envvar
@@ -147,7 +147,7 @@ applications:
     destination:
       namespace: cert-manager-operator
     source:
-      path: clusters/local.hub/apps/certificates/overlays/hub
+      path: clusters/overlays/local.hub/apps/certificates/overlays/hub
 
   dev-tools:
     annotations:
@@ -164,7 +164,7 @@ applications:
     destination:
       namespace: openshift-monitoring
     source:
-      path: clusters/local.hub/apps/openshift-monitoring/base
+      path: clusters/overlays/local.hub/apps/openshift-monitoring/base
 
   quay-registry:
     # leave disabled unless needed for demo
@@ -172,7 +172,7 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     source:
-      path: clusters/local.hub/apps/quay-registry-operator/overlays/qnap
+      path: clusters/overlays/local.hub/apps/quay-registry-operator/overlays/qnap
 
   cost-management:
     annotations:
@@ -180,14 +180,14 @@ applications:
     destination:
       namespace: costmanagement-metrics-operator
     source:
-      path: clusters/local.hub/apps/cost-management-operator/overlays/default
+      path: clusters/overlays/local.hub/apps/cost-management-operator/overlays/default
 
   lokistack:
     enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     source:
-      path: clusters/local.hub/apps/lokistack/overlays/qnap
+      path: clusters/overlays/local.hub/apps/lokistack/overlays/qnap
     syncPolicyRetry:
       limit: 5
       backoff:
