Refactor cluster certificates

--- a/clusters/overlays/local.home/apps/certificates/kustomization.yaml
+++ b/clusters/overlays/local.home/apps/certificates/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
-- ../../../../../../components/apps/certificates/base
+- ../../../../../components/apps/certificates/base
 
 patches:
   - patch: |-
