--- a/clusters/overlays/local.home/apps/consolelinks/kustomization.yaml
+++ b/clusters/overlays/local.home/apps/consolelinks/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../../../../../components/configs/consolelinks/base
+- ../../../../../components/configs/consolelinks/base
 - acs-consolelink.yaml
 - nexus-consolelink.yaml
 - sonarqube-consolelink.yaml
