Refactor LVM operator

--- a/clusters/overlays/local.home/apps/lvm-operator/kustomization.yaml
+++ b/clusters/overlays/local.home/apps/lvm-operator/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
-- ../../../../../../components/apps/lvm-operator/base
+- ../../../../../components/apps/lvm-operator/base
 
 patches:
   - patch: |-
