Refactor node-config

--- a/clusters/overlays/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/overlays/local.home/argocd/bootstrap/values.yaml
@@ -209,7 +209,7 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '99'
     source:
-      path: clusters/overlays/local.home/apps/node-config/base
+      path: clusters/overlays/local.home/apps/node-config
 
 # Tenants
   gitops:
