--- a/clusters/overlays/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/overlays/local.home/argocd/bootstrap/values.yaml
@@ -152,7 +152,7 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
     source:
-      path: clusters/overlays/local.home/apps/lokistack/overlays/qnap
+      path: clusters/overlays/local.home/apps/lokistack
     syncPolicyRetry:
       limit: 5
       backoff:
