--- a/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
@@ -187,7 +187,7 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     source:
-      path: clusters/overlays/local.hub/apps/lokistack/overlays/qnap
+      path: clusters/overlays/local.hub/apps/lokistack
     syncPolicyRetry:
       limit: 5
       backoff:
