--- a/clusters/overlays/local.home/apps/quay-registry-operator/kustomization.yaml
+++ b/clusters/overlays/local.home/apps/quay-registry-operator/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
 namespace: quay
 
 resources:
-- ../../../../../../components/apps/quay-registry-operator/overlays/default
+- ../../../../../components/apps/quay-registry-operator/overlays/default
 - init-user-password-secret.yaml
 - init-quay-job.yaml
 - registry-config-bundle-secret.yaml
