Fix ACS location

--- a/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
@@ -61,7 +61,7 @@ applications:
     destination:
       namespace: stackrox
     source:
-      path: clusters/overlays/local.hub/apps/acs-operator/overlays/certificate
+      path: clusters/overlays/local.hub/apps/acs-operator
 
   acm-hub:
     annotations:
