Fix paths from refactor

--- a/clusters/overlays/local.hub/apps/lvm-operator/kustomization.yaml
+++ b/clusters/overlays/local.hub/apps/lvm-operator/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
-- ../../../../../../components/lvm-operator/base
+- ../../../../../components/lvm-operator/base
 
 patches:
   - patch: |-
