--- a/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
+++ b/clusters/overlays/local.hub/argocd/bootstrap/values.yaml
@@ -123,7 +123,7 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: '11'
     source:
-      path: clusters/local.hub/apps/consolelinks
+      path: clusters/overlays/local.hub/apps/consolelinks
 
   authentication:
     annotations:
